argocd/applications/manifests/cilium/lab-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lab
  labels:
    app.kubernetes.io/name: lab
  annotations:
    cert-manager.io/cluster-issuer: "selfsigned-cluster-issuer"
spec:
  ingressClassName: cilium
  rules:
  - host: lab.idkthisisademo.lol
    http:
      paths:
      - pathType: Prefix
        path: "/octoprint"
        backend:
          service:
            name: octoprint
            port: 
              number: 80
  tls:
  - hosts:
    - lab.idkthisisademo.lol
    secretName: lab-tls
